changed part to field

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -67,7 +67,7 @@
     }
    ],
    "source": [
-    "cu.computeFieldLossMetrics(trueFields, predictions, level='part')"
+    "cu.computeFieldLossMetrics(trueFields, predictions, level='field')"
    ]
   },
   {
