--- a/examples.ipynb
+++ b/examples.ipynb
@@ -78,8 +78,8 @@
     {
      "data": {
       "text/plain": [
-       "{'mae': 0.09999999999999999,\n",
-       " 'mse': 0.02333333333333333,\n",
+       "{'mse': 0.02333333333333333,\n",
+       " 'mae': 0.09999999999999999,\n",
        " 'peakR2': 0.8430232558139534}"
       ]
      },
@@ -90,6 +90,28 @@
    ],
    "source": [
     "cu.computeFieldLossMetrics(trueFields, predictions, level='set')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mse': array([0.01      , 0.00333333, 0.05666667]),\n",
+       " 'mae': array([0.1       , 0.03333333, 0.16666667]),\n",
+       " 'r2': array([ 9.82421875e-01, -4.32691405e+30, -2.64285714e+00])}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cu.computeFieldLossMetrics(trueFields, predictions, level='point_agg')"
    ]
   }
  ],
