added baseline function

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -113,6 +113,50 @@
    "source": [
     "cu.computeFieldLossMetrics(trueFields, predictions, level='point_agg')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mse': 0.19481481481481483,\n",
+       " 'mae': 0.2740740740740741,\n",
+       " 'peakR2': -0.10465116279069786}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cu.baseline(trueFields, avgLevel='point', level='set')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mse': 0.22666666666666668,\n",
+       " 'mae': 0.3333333333333333,\n",
+       " 'peakR2': -0.4186046511627908}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cu.baseline(trueFields, avgLevel='set', level='set')"
+   ]
   }
  ],
  "metadata": {
