--- a/examples.ipynb
+++ b/examples.ipynb
@@ -20,10 +20,10 @@
     {
      "data": {
       "text/plain": [
-       "{'errors': [array([0.1, 0. , 0.1]),\n",
+       "{'errors': [array([ 0.1, -0.1,  0.1]),\n",
        "  array([ 0.1,  0. , -0.4]),\n",
        "  array([0.1, 0.1, 0. ])],\n",
-       " 'relErrs': [array([1.        , 0.        , 0.33333333]),\n",
+       " 'relErrs': [array([ 1.        , -1.        ,  0.33333333]),\n",
        "  array([ 1. ,  0. , -0.8]),\n",
        "  array([0.05882353, 0.5       , 0.        ])]}"
       ]
@@ -34,7 +34,7 @@
     }
    ],
    "source": [
-    "trueFields = [np.array([0.1, 0.2, 0.3]), \n",
+    "trueFields = [np.array([0.1, 0.1, 0.3]), \n",
     "              np.array([0.1, 0.2, 0.5]),\n",
     "              np.array([1.7, 0.2, 0.6])]\n",
     "\n",
@@ -53,10 +53,10 @@
     {
      "data": {
       "text/plain": [
-       "{'mse': [0.006666666666666665, 0.05666666666666668, 0.006666666666666658],\n",
-       " 'mae': [0.06666666666666667, 0.16666666666666666, 0.06666666666666662],\n",
+       "{'mse': [0.01, 0.05666666666666668, 0.006666666666666658],\n",
+       " 'mae': [0.09999999999999999, 0.16666666666666666, 0.06666666666666662],\n",
        " 'maxAE': [0.1, 0.4, 0.1],\n",
-       " 'mae/peak': [0.22222222222222224, 0.3333333333333333, 0.03921568627450978],\n",
+       " 'mae/peak': [0.3333333333333333, 0.3333333333333333, 0.03921568627450978],\n",
        " 'maxAE/peak': [0.33333333333333337, 0.8, 0.05882352941176471],\n",
        " 'relEAtPeak': [0.33333333333333326, 0.8, 0.05882352941176463]}"
       ]
@@ -78,9 +78,10 @@
     {
      "data": {
       "text/plain": [
-       "{'mse': 0.02333333333333333,\n",
-       " 'mae': 0.09999999999999999,\n",
-       " 'peakR2': 0.8430232558139534}"
+       "{'mse': 0.024444444444444446,\n",
+       " 'mae': 0.1111111111111111,\n",
+       " 'peakR2': 0.8430232558139534,\n",
+       " 'meanAggR2': -1.2201450892857149}"
       ]
      },
      "execution_count": 4,
@@ -100,9 +101,9 @@
     {
      "data": {
       "text/plain": [
-       "{'mse': array([0.01      , 0.00333333, 0.05666667]),\n",
-       " 'mae': array([0.1       , 0.03333333, 0.16666667]),\n",
-       " 'r2': array([ 9.82421875e-01, -4.32691405e+30, -2.64285714e+00])}"
+       "{'mse': array([0.01      , 0.00666667, 0.05666667]),\n",
+       " 'mae': array([0.1       , 0.06666667, 0.16666667]),\n",
+       " 'r2': array([ 0.98242188, -2.        , -2.64285714])}"
       ]
      },
      "execution_count": 5,
@@ -122,9 +123,10 @@
     {
      "data": {
       "text/plain": [
-       "{'mse': 0.19481481481481483,\n",
-       " 'mae': 0.2740740740740741,\n",
-       " 'peakR2': -0.10465116279069786}"
+       "{'mse': 0.19555555555555557,\n",
+       " 'mae': 0.2888888888888889,\n",
+       " 'peakR2': -0.10465116279069786,\n",
+       " 'meanAggR2': 0.0}"
       ]
      },
      "execution_count": 6,
@@ -144,9 +146,10 @@
     {
      "data": {
       "text/plain": [
-       "{'mse': 0.22666666666666668,\n",
-       " 'mae': 0.3333333333333333,\n",
-       " 'peakR2': -0.4186046511627908}"
+       "{'mse': 0.2328395061728395,\n",
+       " 'mae': 0.34074074074074073,\n",
+       " 'peakR2': -0.4421834625322998,\n",
+       " 'meanAggR2': -9.864738343253965}"
       ]
      },
      "execution_count": 7,
