--- a/examples.ipynb
+++ b/examples.ipynb
@@ -200,13 +200,45 @@
    "source": [
     "cu.baseline(trueFields, trueFields, avgLevel='set', level='set')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mse': 0.38364197530864197,\n",
+       " 'mae': 0.5796296296296296,\n",
+       " 'mre': 0.6947211678669479,\n",
+       " 'peakR2': -0.13643235071806514}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# various field sizes\n",
+    "trueFields = [np.array([0.1, 0.1]), \n",
+    "              np.array([0.1, 0.2, 0.5]),\n",
+    "              np.array([1.7])]\n",
+    "\n",
+    "predictions = [np.array([0.0, 0.2]), \n",
+    "               np.array([0.0, 0.2, 0.9]),\n",
+    "               np.array([1.6])]\n",
+    "\n",
+    "cu.baseline(trueFields, predictions, avgLevel='set', level='set')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ptgeom",
+   "display_name": "ptgeom-cpu",
    "language": "python",
-   "name": "ptgeom"
+   "name": "ptgeom-cpu"
   },
   "language_info": {
    "codemirror_mode": {
@@ -218,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
